Init Basic Template

--- a/index.html
+++ b/index.html
@@ -4,3 +4,24 @@
 	Jordan Pakrosnis
 	11/18/2015
 -->
+
+<!doctype html>
+<html lang="en-US">
+
+	<head>
+
+		<meta charset="UTF-8">
+		<title>Cash For Bacon!</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Turn your extra bacon in to CASH; FAST!">
+
+		<link rel="stylesheet" href="style.css">
+
+	</head>
+
+	<body>
+
+	</body>
+
+</html>
