--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Turn your extra bacon in to CASH; FAST!">
 
+		<!-- Main Styles (SCSS) -->
 		<link rel="stylesheet" href="style.css">
+
+		<!-- Google Fonts - Open Sans -->
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800italic,600italic,800' rel='stylesheet' type='text/css'>
 
 	</head>
 
