Site Header Markup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
 	<body>
 
+		<header>
+
+			<div class="wrap">
+
+				<!-- Site Title -->
+				<h1>Got Some Bacon?<span>Get Some Cash!</span></h1>
+
+			</div><!-- /.wrap -->
+
+		</header>
+
 	</body>
 
 </html>
