#girl-img and #bacon-img Markup

--- a/index.html
+++ b/index.html
@@ -26,16 +26,27 @@
 
 	<body>
 
+		<!-- Page Header -->
 		<header>
 
 			<div class="wrap">
 
-				<!-- Site Title -->
+				<!-- Page Title -->
 				<h1>Got Some Bacon?<span>Get Some Cash!</span></h1>
 
 			</div><!-- /.wrap -->
 
 		</header>
+
+		<!-- Girl & Bacon -->
+		<section id="girl-bacon">
+
+			<div class="wrap">
+				<div id="girl-img"></div>
+				<div id="bacon-img"></div>
+			</div>
+
+		</section>
 
 	</body>
 
