Main Content Wrapper & Main

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 		</header>
 
+
 		<!-- Girl & Bacon -->
 		<section id="girl-bacon">
 
@@ -47,6 +48,18 @@
 			</div>
 
 		</section>
+
+
+		<!-- Main Content Wrapper -->
+		<div id="main-content-wrap">
+
+			<!-- Main Content -->
+			<main>
+
+
+			</main>
+
+		</div><!-- /#main-content-wrap -->
 
 	</body>
 
