--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
 			<!-- Main Content -->
 			<main>
 
+				<h2>Get Rid Of That Eyesore Sitting In Your Fridge</h2>
+				<h3>&amp; Put Money In Your Hands</h3>
+				<h4>We'll Pay Top Dollar No Matter The Condition</h4>
+
+				<ul id="questions">
+					<li>Weeks Old?<span class="answer">No Problem!</span></li>
+					<li>Smells Funny?<span class="answer">The Smellier the Better!</span></li>
+					<li>Brown Bacon?<span class="answer">We Love Those!</span></li>
+					<li>Canadian?<span class="answer">We'll eh it for FREE!</span></li>
+				</ul>
 
 			</main>
 
