Logo & CTA Markup

--- a/index.html
+++ b/index.html
@@ -54,18 +54,32 @@
 		<div id="main-content-wrap">
 
 			<!-- Main Content -->
-			<main>
+			<main class="clearfix">
 
+				<!-- Main Verbiage -->
 				<h2>Get Rid Of That Eyesore Sitting In Your Fridge</h2>
 				<h3>&amp; Put Money In Your Hands</h3>
 				<h4>We'll Pay Top Dollar No Matter The Condition</h4>
 
+				<!-- Questions -->
 				<ul id="questions">
 					<li>Weeks Old?<span class="answer">No Problem!</span></li>
 					<li>Smells Funny?<span class="answer">The Smellier the Better!</span></li>
 					<li>Brown Bacon?<span class="answer">We Love Those!</span></li>
 					<li>Canadian?<span class="answer">We'll eh it for FREE!</span></li>
 				</ul>
+
+				<!-- Logo & Call to Action -->
+				<div id="logo-cta">
+
+					<div id="logo"></div>
+
+					<div id="call">
+						<div id="phone-img"></div>
+						<h2>Call Us Today<span class="number">407-123-4567</span></h2>
+					</div><!-- /#call -->
+
+				</div><!-- /#logo-cta -->
 
 			</main>
 
