--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="wrap">
 
 				<!-- Page Title -->
-				<h1>Got Some Bacon?<span>Get Some Cash!</span></h1>
+				<h1>Got Some Bacon?<br><span>Get Some Cash!</span></h1>
 
 			</div><!-- /.wrap -->
 
