--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
 				<!-- Questions -->
 				<ul id="questions">
-					<li>Weeks Old?<span class="answer">No Problem!</span></li>
-					<li>Smells Funny?<span class="answer">The Smellier the Better!</span></li>
-					<li>Brown Bacon?<span class="answer">We Love Those!</span></li>
-					<li>Canadian?<span class="answer">We'll eh it for FREE!</span></li>
+					<li>Weeks Old?<br><span>No Problem!</span></li>
+					<li>Smells Funny?<br><span>The Smellier the Better!</span></li>
+					<li>Brown Bacon?<br><span>We Love Those!</span></li>
+					<li>Canadian?<br><span>We'll eh it for FREE!</span></li>
 				</ul>
 
 				<!-- Logo & Call to Action -->
