Cont. CTA Styling

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 					<div id="call">
 						<div id="phone-img"></div>
-						<h2>Call Us Today<span class="number">407-123-4567</span></h2>
+						<p>Call Us Today<span class="number">407-123-4567</span></p>
 					</div><!-- /#call -->
 
 				</div><!-- /#logo-cta -->
