Call Styling; Add CTA Bottom Margin

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 					<div id="call">
 						<div id="phone-img"></div>
-						<p>Call Us Today<span class="number">407-123-4567</span></p>
+						<h3>Call Us Today<br><span class="number">407-123-4567</span></h3>
 					</div><!-- /#call -->
 
 				</div><!-- /#logo-cta -->
